--- a/pom.xml
+++ b/pom.xml
@@ -20,14 +20,20 @@
         <slf4j.version>1.8.0-beta4</slf4j.version>
         <appium.java.client.version>7.5.1</appium.java.client.version>
         <allure.maven.version>2.10.0</allure.maven.version>
-        <aspectj.version>1.8.13</aspectj.version>
+        <aspectj.version>1.9.6</aspectj.version>
         <allure.version>2.14.0</allure.version>
-        <cucumber.version>6.10.4</cucumber.version>
+        <cucumber.version>4.8.1</cucumber.version>
         <junit.version>4.13.1</junit.version>
         <selenide.version>5.22.2</selenide.version>
     </properties>
 
     <dependencies>
+
+        <!--<dependency>
+            <groupId>info.cukes</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>1.1.8</version>
+        </dependency>-->
 
         <dependency>
             <groupId>org.aspectj</groupId>
